[package]
name = "podserve"
description = "Spin up an RSS podcast feed webserver from a directories of MP3s"
version = "0.1.1"
authors = ["Pascal Hartig <phartig@rdrei.net>"]
edition = "2018"

[dependencies]
rss = "1.8.0"
id3 = "0.3.0"
rocket = "0.4.1"
rocket_contrib = "0.4.1"
url = "1.7.2"
structopt = "0.2.17"
log = "0.4.6"
pretty_env_logger = "0.3.0"
chrono = "0.4.6"
serde_derive = "1.0.98"
failure = "0.1.5"
toml = "0.5.1"
serde = "1.0.98"
